--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     // Use the current location to dynamically determine the base URL
     const flvPlayer = flvjs.createPlayer({
         type: 'flv',
-        url: `${window.location.protocol}//${window.location.hostname}:8000/live/stream.flv`
+        url: `https://turtle_strm.blxdbny.com/`
     });
     flvPlayer.attachMediaElement(videoElement);
     flvPlayer.load();
