im actually so stupid dawg

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     // Use the current location to dynamically determine the base URL
     const flvPlayer = flvjs.createPlayer({
         type: 'flv',
-        url: `https://turtle_strm.blxdbny.com/`
+        url: `https://turtle_strm.blxdbny.com/live/stream.flv`
     });
     flvPlayer.attachMediaElement(videoElement);
     flvPlayer.load();
